api-server: add setStar API
